# kloudspeaker

./: .gitignore  CMakeLists.txt  Messages.sh  prefix.sh
doc/: CMakeLists.txt  index.docbook
icons/: CMakeLists.txt
src/: CMakeLists.txt  driver.cpp  driver.h  kloudspeakerSettings.kcfg  kloudspeakerSettings.kcfgc  kloudspeakerui.rc  kloudspeakerview.cpp  kloudspeakerview.h  kloudspeakerview.ui  kloudspeakerwindow.cpp  kloudspeakerwindow.h  main.cpp  org.example.kloudspeaker.appdata.xml  org.example.kloudspeaker.desktop  settings.ui
